Correction reponsive Clients.jsx

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Remplacez le lien de l'icône par votre logo -->
-    <link rel="icon" type="image/png" href="/logo.jpg" />
+    <!-- Placez votre logo dans le dossier public/images et mettez à jour le chemin -->
+    <link rel="icon" type="image/png" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wassolo Service</title>
   </head>
